--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
 
       <!-- Lista horizontal tipo 'feed' para empleados -->
       <div class="team-carousel-wrap" data-aos="fade-up">
-        <button class="carousel-btn prev" aria-label="Anterior" title="Anterior">‹</button>
+        <button class="carousel-btn prev" aria-label="Anterior" title="Anterior">
+          <img src="imagenes/flechai.png" alt="" class="carousel-icon" width="20" height="20" loading="lazy" aria-hidden="true">
+        </button>
         <div class="team-carousel" id="teamCarousel" role="list">
 
           <article class="member-card" role="listitem" data-fullname="José Balza" data-title="Médico Veterinario 🩺" data-bio="José Balza es Médico Veterinario egresado de la UNERG. Apasionado por la formación continua y con experiencia en medicina de pequeños y grandes animales. Su vocación es el cuidado integral y el bienestar animal." data-bullets="UNERG 🇻🇪|En eterno aprendizaje.|🐕🐈‍⬛🐄🐐🐑🐖🐎" data-aos="zoom-in">
@@ -273,7 +275,9 @@
           </article>
 
         </div>
-        <button class="carousel-btn next" aria-label="Siguiente" title="Siguiente">›</button>
+        <button class="carousel-btn next" aria-label="Siguiente" title="Siguiente">
+          <img src="imagenes/flechad.png" alt="" class="carousel-icon" width="20" height="20" loading="lazy" aria-hidden="true">
+        </button>
       </div>
 
     </div>
@@ -481,19 +485,18 @@
       <div>
         <h4>Horario</h4>
         <ul class="schedule" aria-label="Horario de atención">
-          <li><strong>Lunes</strong> — 8 a. m.–5 p. m.</li>
-          <li><strong>Martes</strong> — 8 a. m.–5 p. m.</li>
-          <li><strong>Miércoles</strong> — 8 a. m.–5 p. m.</li>
-          <li><strong>Jueves</strong> — 8 a. m.–5 p. m.</li>
-          <li><strong>Viernes</strong> — 8 a. m.–5 p. m.</li>
-          <li><strong>Sábado</strong> — 8:30 a. m.–5 p. m.</li>
-          <li><strong>Domingo</strong> — 9 a. m.–2 p. m.</li>
+          <li><strong>Lunes</strong><span class="time">8 a. m.–5 p. m.</span></li>
+          <li><strong>Martes</strong><span class="time">8 a. m.–5 p. m.</span></li>
+          <li><strong>Miércoles</strong><span class="time">8 a. m.–5 p. m.</span></li>
+          <li><strong>Jueves</strong><span class="time">8 a. m.–5 p. m.</span></li>
+          <li><strong>Viernes</strong><span class="time">8 a. m.–5 p. m.</span></li>
+          <li><strong>Sábado</strong><span class="time">8:30 a. m.–5 p. m.</span></li>
+          <li><strong>Domingo</strong><span class="time">9 a. m.–2 p. m.</span></li>
         </ul>
       </div>
 
       <div>
-        <h4>Redes</h4>
-        <p>@safepet2021</p>
+        <p class="social">@safepet2021</p>
       </div>
     </div>
   </footer>
